fix more alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4152,6 +4152,7 @@
 
 ul.left{
 	margin-left: 10em;
+	text-align: left;
 }
 ul.right{
 	margin-left: 5em;
